--- a/src/Components/ImageLinkForm/ImageLinkForm.css
+++ b/src/Components/ImageLinkForm/ImageLinkForm.css
@@ -1,6 +1,6 @@
 .image-input-wrapper {
   display: grid;
-  gap: .75rem;
+  gap: 0.75rem;
   width: 100%;
   max-width: 37.5rem;
   padding: 0 1.5rem 2rem 1.5rem;
